--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Webbakery
+Theme Name: Cornelis
 Theme URI: http://underscores.me/
 Author: Webbakery
 Author URI: http://underscores.me/
