--- a/sass/cornelis/_fonts.scss
+++ b/sass/cornelis/_fonts.scss
@@ -44,9 +44,9 @@ b, strong {
 	font-weight: bold;
 }
 
-$primary: 'SF Movie Poster';
-$secondary: 'Museo Sans';
-$tertiary: 'Minion Pro';
+$primary: 'SF Movie Poster', sans-serif;
+$secondary: 'Museo Sans', sans-serif;
+$tertiary: 'Minion Pro', sans-serif;
 
 
 h1,
