--- a/sass/cornelis/_footer.scss
+++ b/sass/cornelis/_footer.scss
@@ -6,6 +6,16 @@ footer {
     padding: ratio-vw(40px) 0 ratio-vw(110px) 0;
   }
 
+  a {
+    text-decoration: none;
+    border-bottom: 0.5px solid transparent;;
+
+    &:hover {
+      color: $white;
+      border-color: $white;
+    }
+  }
+
   h4, p {
     color: $white;
   }
@@ -34,6 +44,7 @@ footer {
 
     p {
       width: 400px;
+      max-width: 100%;
     }
   }
 }
