--- a/sass/cornelis/cornelis.scss
+++ b/sass/cornelis/cornelis.scss
@@ -3,6 +3,7 @@
 @import "fonts";
 @import "standard";
 @import "main";
+@import "apartments";
 @import "buttons";
 @import "colors";
 @import "responsive";
