--- a/sass/cornelis/_main.scss
+++ b/sass/cornelis/_main.scss
@@ -340,6 +340,7 @@ body {
 
 #appartementen {
   padding-top: 125px;
+  margin-bottom: 50px;
 
   @include media-breakpoint-lg() {
     padding-top: ratio-vw(125px);
@@ -374,6 +375,16 @@ body {
 
     @include media-breakpoint-lg() {
       margin-top: ratio-vw(55px);
+    }
+
+    .impression_slider {
+      height: 600px;
+
+      img {
+        height: 600px;
+        width: 100%;
+        object-fit: cover;
+      }
     }
 
     .col_left, .col_right {
@@ -422,11 +433,7 @@ body {
 #gevelpark {
   background: $lightgray;
   position: relative;
-  margin-top: 125px;
 
-  @include media-breakpoint-lg() {
-    margin-top: ratio-vw(125px);
-  }
 
   .first_row {
     height: 640px;
@@ -521,7 +528,6 @@ body {
 
   @include media-breakpoint-lg() {
     margin: ratio-vw(125px);
-
   }
 
   .col_left {
@@ -1000,6 +1006,39 @@ body {
   }
 }
 
+#faq_downloads {
+  padding-bottom: 50px;
+
+  .col_left {
+    h3 {
+      font-size: 100px;
+      letter-spacing: 3.75px;
+      line-height: 70px;
+
+      @include media-breakpoint-lg() {
+        font-size: ratio-vw(100px);
+        line-height: ratio-vw(70px);
+      }
+    }
+
+    p {
+      max-width: 550px;
+    }
+  }
+
+  .col_right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .btn {
+      color: $white;
+      cursor: pointer;
+    }
+  }
+
+}
+
 
 #contact {
   padding: 75px 0;
@@ -1130,9 +1169,121 @@ body {
           }
         }
       }
-
-
     }
   }
 }
 
+#makelaars {
+  padding: 35px 0 35px 0;
+
+  h3 {
+    font-family: $secondary;
+    font-size: 12px;
+    letter-spacing: 1.71px;
+    line-height: 34px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+  }
+
+  .makelaars_overzicht {
+    .makelaar {
+      img {
+        height: 150px;
+        width: 150px;
+        object-fit: cover;
+        margin-bottom: 10px;
+      }
+
+      .name, .function {
+        font-size: 12px;
+        letter-spacing: 0.5px;
+        line-height: 12px;
+        text-transform: uppercase;
+        font-weight: 300;
+      }
+    }
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background: $white;
+  z-index: 999;
+  visibility: hidden;
+  opacity: 0;
+  transform: translateX(200%);
+  transition: all .3s ease-in-out;
+
+  &.active {
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  .close_overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: $white;
+    height: 100px;
+    width: 100px;
+    color: #000;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+
+    &:hover {
+      background: $green;
+      color: $white!important;
+    }
+  }
+
+  .col_left {
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .content {
+      h3 {
+        font-size: 55px;
+        letter-spacing: 2.06px;
+        line-height: 40px;
+        margin-bottom: 25px;
+
+        @include media-breakpoint-lg() {
+          font-size: ratio-vw(55px);
+          letter-spacing: ratio-vw(2.06px);
+          line-height: ratio-vw(40px);
+          margin-bottom: ratio-vw(25px);
+        }
+      }
+
+      a {
+        display: block;
+        text-decoration: none;
+        margin-bottom: 5px;
+      }
+    }
+  }
+
+  .col_right {
+    height: 100vh;
+
+    .overlay_img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+}
