--- a/sass/cornelis/cornelis.scss
+++ b/sass/cornelis/cornelis.scss
@@ -7,8 +7,8 @@
 @import "buttons";
 @import "colors";
 @import "responsive";
+@import "videos";
 @import "header";
 @import "footer";
 @import "slick";
-@import "fontawesome";
 @import "responsive";
