--- a/sass/cornelis/_main.scss
+++ b/sass/cornelis/_main.scss
@@ -68,11 +68,7 @@ body {
   &.no-scroll {
     overflow: hidden;
 
-    &::before {
-      opacity: 0.8;
-      visibility: visible;
 
-    }
   }
 }
 
@@ -1225,7 +1221,7 @@ body {
   visibility: hidden;
   opacity: 0;
   transform: translateX(200%);
-  transition: all .3s ease-in-out;
+  transition: all .5s ease-in-out;
 
   &.active {
     visibility: visible;
@@ -1281,6 +1277,7 @@ body {
         display: block;
         text-decoration: none;
         margin-bottom: 5px;
+        font-weight: 600;
       }
     }
   }
