--- a/sass/cornelis/_main.scss
+++ b/sass/cornelis/_main.scss
@@ -1259,6 +1259,8 @@ body {
     justify-content: center;
 
     .content {
+      max-width: 650px;
+
       h3 {
         font-size: 55px;
         letter-spacing: 2.06px;
