--- a/sass/cornelis/_videos.scss
+++ b/sass/cornelis/_videos.scss
@@ -99,7 +99,7 @@
       letter-spacing: 2.06px;
       line-height: 40px;
       margin-bottom: 0;
-
+      text-transform: uppercase;
     }
   }
 
