--- a/sass/cornelis/_main.scss
+++ b/sass/cornelis/_main.scss
@@ -1296,3 +1296,127 @@ body {
     }
   }
 }
+
+
+/* Accordion */
+
+.accordion {
+  font-size: 1rem;
+  width: 100%;
+  margin: 0 auto 10px auto;
+  border-radius: 5px;
+  line-height: 26px;
+}
+
+.accordion-header {
+  font-size: 26px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 38px;
+  color: $black;
+  cursor: pointer;
+  transition: all .3s;
+  display: flex;
+  align-items: center;
+  padding: 20px 15px;
+  border-top: 1px solid #D5D5D5;
+  border-bottom: 1px solid #D5D5D5;
+  position: relative;
+
+  &:hover {
+    position: relative;
+    z-index: 5;
+    background: #f4f4f4;
+  }
+}
+
+.accordion__item .accordion__item {
+
+}
+
+.accordion-body {
+  background: transparent;
+  display: none;
+}
+
+.accordion-body__contents {
+  padding: 1.5em 0;
+  font-family: $primary;
+  color: $black;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 30px;
+}
+
+.accordion__item.active:last-child .accordion-header {
+  border-radius: unset;
+}
+
+.accordion:first-child > .accordion__item > .accordion-header {
+  border-bottom: 1px solid transparent;
+}
+
+.accordion-header:after {
+  content: "+";
+  color: $black;
+  font-size: 40px;
+  float: right;
+  position: absolute;
+  right: 15px;
+  transition: .3s all ease-in;
+  font-family: $secondary;
+}
+
+.accordion-header.on:after {
+  content: "-";
+}
+
+.accordion__item.active > .accordion-header:after {
+  transform: rotate(-180deg);
+}
+
+.accordion__item.active .accordion-header {
+  background: #000;
+
+}
+
+.accordion__item .accordion__item .accordion-header {
+  background: #f1f1f1;
+  color: #353535;
+}
+
+.accordion__item {
+  position: relative;
+
+  .accordion-header {
+    overflow: hidden;
+  }
+
+  .accordion__content {
+    overflow: hidden;
+    color: $black;
+    transition: all .3s ease-in-out;
+    visibility: hidden;
+    max-height: 0;
+    padding: 0 15px;
+
+    a {
+      color: $black;
+    }
+  }
+
+  &.accordion__item--active {
+
+    .accordion-header:after {
+      transform: rotate(-135deg);
+    }
+
+    .accordion__content {
+      opacity: 1;
+      max-height: 100vh;
+      visibility: visible;
+      padding: 15px 15px 25px 15px;
+    }
+  }
+}
