--- a/sass/cornelis/responsive.scss
+++ b/sass/cornelis/responsive.scss
@@ -546,6 +546,7 @@
     .col_left {
       .content {
         max-width: 100%;
+        padding: 50px 30px;
 
         .accordion-header {
           padding: 20px 30px 20px 15px;
