--- a/sass/cornelis/_footer.scss
+++ b/sass/cornelis/_footer.scss
@@ -142,4 +142,11 @@ footer {
 
 .makkelaar_logo {
   margin-top: 40px;
+
+  img {
+    max-height: 100px;
+    object-fit: contain;
+    max-width: 200px;
+    margin-bottom: 50px;
+  }
 }
