--- a/sass/cornelis/responsive.scss
+++ b/sass/cornelis/responsive.scss
@@ -379,6 +379,16 @@
     }
   }
 
+  #makelaars {
+    .makelaars_overzicht {
+      .makelaar {
+        img {
+          height: 150px;
+        }
+      }
+    }
+  }
+
   #contact {
     padding: 0;
 
