--- a/sass/cornelis/_footer.scss
+++ b/sass/cornelis/_footer.scss
@@ -149,6 +149,12 @@ footer {
     max-width: 200px;
     margin-bottom: 50px;
     object-position: right;
+
+    @include media-breakpoint-lg() {
+      max-width: ratio-vw(200px);
+      max-height: ratio-vw(110px);
+
+    }
   }
 }
 
