--- a/sass/cornelis/responsive.scss
+++ b/sass/cornelis/responsive.scss
@@ -272,6 +272,20 @@
 
   #energy {
     padding: 50px 0;
+
+    .col_right {
+      margin-top: 35px;
+
+      h2 {
+        font-size: 70px;
+        line-height: 45px;
+      }
+
+      .subtitle {
+        font-size: 26px;
+        line-height: 32px;
+      }
+    }
   }
 
   #locatie {
